--- a/src/com/ingkee/plugin/ui/MainDialog.form
+++ b/src/com/ingkee/plugin/ui/MainDialog.form
@@ -7,8 +7,9 @@
     <properties>
       <alignmentX value="0.0"/>
       <alignmentY value="0.0"/>
+      <background color="-12828863"/>
       <doubleBuffered value="true"/>
-      <foreground color="-12828863"/>
+      <foreground color="-1"/>
       <inheritsPopupMenu value="false"/>
       <preferredSize width="500" height="500"/>
     </properties>
@@ -18,9 +19,10 @@
     <border type="none"/>
     <children>
       <grid id="6ec70" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="10" left="10" bottom="10" right="10"/>
+        <margin top="20" left="10" bottom="10" right="10"/>
         <constraints border-constraint="North"/>
         <properties>
+          <background color="-12828863"/>
           <foreground color="-12828863"/>
         </properties>
         <border type="none">
@@ -32,25 +34,37 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1118482"/>
               <text value="Service_info：KEY"/>
             </properties>
           </component>
-          <component id="88115" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="88115" class="javax.swing.JTextField" binding="edittext_key">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-12828863"/>
+              <caretPosition value="0"/>
+              <foreground color="-1118482"/>
+              <margin top="0" left="0" bottom="0" right="0"/>
+              <scrollOffset value="0"/>
+              <text value="4564546464"/>
+            </properties>
           </component>
         </children>
       </grid>
       <grid id="b17f7" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
         <properties>
+          <autoscrolls value="false"/>
+          <background color="-12828863"/>
           <foreground color="-12828863"/>
         </properties>
-        <border type="none"/>
+        <border type="none">
+          <title-color color="-12828863"/>
+        </border>
         <children>
           <grid id="e39d7" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
@@ -58,36 +72,37 @@
               <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="8.0"/>
             </constraints>
             <properties>
-              <background color="-4473925"/>
+              <background color="-12828863"/>
             </properties>
             <border type="etched"/>
             <children>
               <grid id="678c9" layout-manager="FlowLayout" hgap="10" vgap="5" flow-align="0">
                 <constraints border-constraint="South"/>
                 <properties>
-                  <background color="-1"/>
+                  <background color="-12828863"/>
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="5446" class="javax.swing.JButton" binding="button3" default-binding="true">
+                  <component id="5446" class="javax.swing.JButton" binding="btn_add">
                     <constraints/>
                     <properties>
-                      <background color="-1118482"/>
+                      <background color="-12828863"/>
                       <borderPainted value="false"/>
                       <contentAreaFilled value="true"/>
                       <defaultCapable value="true"/>
+                      <foreground color="-1118482"/>
                       <margin top="0" left="0" bottom="0" right="0"/>
                       <preferredSize width="20" height="20"/>
                       <text value="+"/>
                     </properties>
                   </component>
-                  <component id="ccf4c" class="javax.swing.JButton" binding="button4" default-binding="true">
+                  <component id="ccf4c" class="javax.swing.JButton" binding="btn_reduce">
                     <constraints/>
                     <properties>
-                      <background color="-1118482"/>
+                      <background color="-12828863"/>
                       <borderPainted value="false"/>
                       <font name="Consolas" size="16" style="1"/>
-                      <foreground color="-4473925"/>
+                      <foreground color="-1118482"/>
                       <margin top="0" left="0" bottom="0" right="0"/>
                       <preferredSize width="20" height="20"/>
                       <text value="-"/>
@@ -99,7 +114,7 @@
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints border-constraint="Center"/>
                 <properties>
-                  <background color="-1"/>
+                  <background color="-12828863"/>
                 </properties>
                 <border type="none"/>
                 <children>
@@ -108,15 +123,15 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <background color="-1"/>
+                      <background color="-12828863"/>
                     </properties>
                     <border type="empty"/>
                     <children>
-                      <grid id="5899" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="5899" binding="listview_req" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints/>
                         <properties>
-                          <background color="-1"/>
+                          <background color="-12828863"/>
                         </properties>
                         <border type="none"/>
                         <children/>
@@ -127,51 +142,86 @@
               </grid>
             </children>
           </grid>
-          <grid id="1bcf5" layout-manager="FormLayout">
-            <rowspec value="center:d:grow"/>
-            <colspec value="fill:d:grow"/>
+          <grid id="1bcf5" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="1.0" weighty="10.0"/>
+              <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="10.0"/>
             </constraints>
-            <properties/>
-            <border type="none"/>
+            <properties>
+              <background color="-12828863"/>
+              <foreground color="-12828863"/>
+            </properties>
+            <border type="etched">
+              <title-color color="-12828863"/>
+            </border>
             <children>
               <scrollpane id="c8127">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                  <forms top="0" left="10" bottom="10" right="10" defaultalign-horz="false" defaultalign-vert="false"/>
-                </constraints>
-                <properties/>
-                <border type="etched"/>
+                <constraints border-constraint="Center"/>
+                <properties>
+                  <background color="-12828863"/>
+                </properties>
+                <border type="empty"/>
                 <children>
-                  <component id="c35e6" class="javax.swing.JTextPane" binding="textPane2" default-binding="true">
+                  <component id="c35e6" class="javax.swing.JTextPane" binding="edittext_rsp">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <background color="-12828863"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
+              <grid id="4b9d9" layout-manager="FlowLayout" hgap="0" vgap="5" flow-align="0">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <background color="-12828863"/>
+                </properties>
+                <border type="empty">
+                  <title-color color="-12828863"/>
+                </border>
+                <children>
+                  <component id="27ddf" class="javax.swing.JButton" binding="formatButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <background color="-12828863"/>
+                      <borderPainted value="false"/>
+                      <foreground color="-1118482"/>
+                      <preferredSize width="80" height="20"/>
+                      <text value="Format"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
-          <grid id="4a941" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+          <grid id="4a941" layout-manager="FlowLayout" hgap="10" vgap="5" flow-align="1">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
               <gridbag weightx="1.0" weighty="0.2"/>
             </constraints>
-            <properties/>
-            <border type="none"/>
+            <properties>
+              <background color="-12828863"/>
+            </properties>
+            <border type="none">
+              <title-color color="-12828863"/>
+            </border>
             <children>
               <component id="df09" class="javax.swing.JLabel">
                 <constraints/>
                 <properties>
-                  <text value="Label"/>
+                  <foreground color="-1118482"/>
+                  <text value="Req Method"/>
                 </properties>
               </component>
-              <component id="c138b" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <hspacer id="f575c">
+                <constraints/>
+              </hspacer>
+              <component id="c138b" class="javax.swing.JComboBox" binding="spinner_reqmethod">
                 <constraints/>
                 <properties>
                   <alignmentX value="0.0"/>
                   <alignmentY value="0.0"/>
+                  <background color="-12828863"/>
+                  <foreground color="-1118482"/>
                   <preferredSize width="120" height="29"/>
                 </properties>
               </component>
@@ -182,28 +232,37 @@
       <grid id="168a1" layout-manager="FlowLayout" hgap="10" vgap="8" flow-align="2">
         <constraints border-constraint="South"/>
         <properties>
+          <background color="-12828863"/>
           <foreground color="-12828863"/>
         </properties>
-        <border type="bevel-raised"/>
+        <border type="etched">
+          <color color="-7697009"/>
+        </border>
         <children>
-          <component id="c9586" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="c9586" class="javax.swing.JButton" binding="btn_cancel">
             <constraints/>
             <properties>
+              <background color="-12828863"/>
+              <font name="Consolas"/>
+              <foreground color="-1118482"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <preferredSize width="120" height="30"/>
-              <text value="Button"/>
+              <text value="Cancel"/>
             </properties>
           </component>
-          <component id="30131" class="javax.swing.JButton" binding="button2" default-binding="true">
+          <component id="30131" class="javax.swing.JButton" binding="btn_ok">
             <constraints/>
             <properties>
+              <background color="-12828863"/>
+              <font name="Consolas"/>
+              <foreground color="-1118482"/>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
               <margin top="0" left="0" bottom="0" right="0"/>
               <preferredSize width="120" height="30"/>
-              <text value="Button"/>
+              <text value="OK"/>
             </properties>
           </component>
         </children>
