--- a/src/com/ingkee/plugin/ui/ParamEditDialog.form
+++ b/src/com/ingkee/plugin/ui/ParamEditDialog.form
@@ -97,11 +97,20 @@
             </constraints>
             <properties/>
           </component>
-          <component id="32258" class="javax.swing.JSpinner" binding="typeSpinner">
+          <component id="96546" class="javax.swing.JComboBox" binding="typeComboBox">
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <model>
+                <item value="String"/>
+                <item value="int"/>
+                <item value="Object"/>
+                <item value="long"/>
+                <item value="double"/>
+                <item value="float"/>
+              </model>
+            </properties>
           </component>
         </children>
       </grid>
