--- a/src/com/ingkee/plugin/ui/MainDialog.form
+++ b/src/com/ingkee/plugin/ui/MainDialog.form
@@ -11,7 +11,7 @@
       <doubleBuffered value="true"/>
       <foreground color="-1"/>
       <inheritsPopupMenu value="false"/>
-      <preferredSize width="500" height="500"/>
+      <preferredSize width="500" height="620"/>
     </properties>
     <clientProperties>
       <html.disable class="java.lang.Boolean" value="false"/>
@@ -69,7 +69,7 @@
           <grid id="e39d7" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="8.0"/>
+              <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
               <background color="-12828863"/>
@@ -132,15 +132,12 @@
                     </properties>
                     <border type="empty"/>
                     <children>
-                      <grid id="5899" binding="listview_req" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                        <margin top="0" left="0" bottom="0" right="0"/>
+                      <component id="cc7f2" class="javax.swing.JList" binding="listview_req">
                         <constraints/>
                         <properties>
                           <background color="-12828863"/>
                         </properties>
-                        <border type="none"/>
-                        <children/>
-                      </grid>
+                      </component>
                     </children>
                   </scrollpane>
                 </children>
@@ -150,7 +147,7 @@
           <grid id="1bcf5" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="8.0"/>
+              <gridbag top="10" left="10" bottom="10" right="10" weightx="1.0" weighty="10.0"/>
             </constraints>
             <properties>
               <background color="-12828863"/>
@@ -171,6 +168,7 @@
                     <constraints/>
                     <properties>
                       <background color="-12828863"/>
+                      <foreground color="-1118482"/>
                     </properties>
                   </component>
                 </children>
