--- a/src/com/ingkee/plugin/ui/ParamEditDialog.form
+++ b/src/com/ingkee/plugin/ui/ParamEditDialog.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="48" y="54" width="436" height="297"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-12828863"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="94766" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12828863"/>
+        </properties>
         <border type="none"/>
         <children>
           <hspacer id="98af6">
@@ -26,7 +30,9 @@
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-12828863"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="e7465" class="javax.swing.JButton" binding="buttonOK">
@@ -34,6 +40,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-12828863"/>
+                  <foreground color="-1118482"/>
                   <text value="OK"/>
                 </properties>
               </component>
@@ -42,6 +50,8 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-12828863"/>
+                  <foreground color="-1118482"/>
                   <text value="Cancel"/>
                 </properties>
               </component>
@@ -54,7 +64,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-12828863"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="82253" class="javax.swing.JLabel" binding="paramName">
@@ -62,6 +74,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1118482"/>
               <text value="paramName"/>
             </properties>
           </component>
@@ -70,6 +83,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1118482"/>
               <text value="paramDiscribe"/>
             </properties>
           </component>
@@ -78,6 +92,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1118482"/>
               <text value="paramType"/>
             </properties>
           </component>
@@ -87,7 +102,10 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-12828863"/>
+              <foreground color="-1118482"/>
+            </properties>
           </component>
           <component id="a7c3e" class="javax.swing.JTextField" binding="discribeEdit">
             <constraints>
@@ -95,13 +113,18 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-12828863"/>
+              <foreground color="-1118482"/>
+            </properties>
           </component>
           <component id="96546" class="javax.swing.JComboBox" binding="typeComboBox">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-12828863"/>
+              <foreground color="-1118482"/>
               <model>
                 <item value="String"/>
                 <item value="int"/>
